err/django-css.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/compressor'...
Listing './lib/python3.5/site-packages/compressor/conf'...
Listing './lib/python3.5/site-packages/compressor/filters'...
Compiling './lib/python3.5/site-packages/compressor/filters/csstidy.py'...
***   File "./lib/python3.5/site-packages/compressor/filters/csstidy.py", line 29
    print err
            ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/compressor/filters/jsmin'...
Compiling './lib/python3.5/site-packages/compressor/filters/yui.py'...
***   File "./lib/python3.5/site-packages/compressor/filters/yui.py", line 42
    print err
            ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/compressor/templates'...
Listing './lib/python3.5/site-packages/compressor/templates/compressor'...
Listing './lib/python3.5/site-packages/compressor/templatetags'...
Listing './lib/python3.5/site-packages/django_css-2.3.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
